# UFL-cpt-data-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
config/: ufl.toml
docs/: DOCKER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CRAWLER.md
docs/superpowers/plans/: 2026-07-18-finalize-corpus.md  2026-07-18-huggingface-dataset-ingestion.md  2026-07-18-ziyouz-bulk-downloader.md  2026-07-19-ocr-garbage-token-scrub.md  (+2 more)
scripts/: fetch_models.py
src/ufl/: cleanup.py  cli.py  config.py  hf_pipeline.py  logging_setup.py  pipeline.py
tests/: test_budget.py  test_clean_apply.py  test_cleanup.py  test_cli_cleanup.py  test_cli_crawl.py  test_cli_fetch_hf.py  test_cli_fetch_ziyouz.py  test_cli_finalize_corpus.py  test_cli_run.py  test_cli_stats.py  test_config.py  test_crawl_blocks.py  test_crawl_candidates.py  test_crawl_categorize.py  test_crawl_collector.py  test_crawl_minimax.py  test_crawl_minimax_token_saving.py  test_crawl_sitemap.py  test_crawl_state.py  test_crawl_urls.py  test_crawl_web_client.py  test_crawl_writer.py  test_dedup.py  test_finalize_dedup.py  test_finalize_hf_rename.py  test_finalize_pii.py  test_finalize_spellcheck.py  test_hf_pipeline.py  test_ingest_detect.py  test_ingest_djvu.py  test_ingest_docx.py  test_ingest_epub.py  test_ingest_fb2.py  test_ingest_hf_dataset.py  test_ingest_html.py  test_ingest_ocr.py  test_ingest_pdf.py  test_ingest_pptx.py  test_ingest_txt.py  test_ingest_url.py  (+13 more)
tests/fixtures/: translit_pairs.tsv
(+54 files in other folders)
