[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ufl"
version = "0.1.0"
description = "Uzbek CPT data pipeline — clean text extraction for local LLM training"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dynamic = ["dependencies"]

[project.scripts]
ufl = "ufl.cli:app"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
